# botkit-project

./: .env.example  bot.js  index.js  package-lock.json  package.json
consumer/: Cargo.toml
consumer/src/: consumer.rs  endpoints.rs  lib.rs  objects.rs
features/: chat.js  greetings.js  tasks.js  user.js
public/: index.html
services/: bot.js  consumer.js
services/bot/: greetings.js  index.js  instance.js  tasks.js
services/bot/actions/: greetings.js  index.js  tasks.js  user.js
struct/: bot.js  package-lock.json  package.json
struct/features/: chat.js  tasks.js
struct/public/: index.html
struct/utils/: helpers.js
utils/: helpers.js  keywords.js  scopes.js
